--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
   "include": [
     "*.js",
     "libraries/*.js",
-    "c:\\Users\\ianro\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.9.3\\p5types\\global.d.ts"
+    "c:\\Users\\ianro\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.9.3\\p5types\\global.d.ts",
+    "classes/*.js"
   ]
 }
